# InheritX

backend/: Cargo.toml
backend/src/: db.rs  lib.rs  validation.rs
backend/src/fitbit_integration/: activity.rs  client.rs  errors.rs  heart_rate.rs  mod.rs  service.rs  sleep.rs  stress.rs  types.rs
contracts/borrowing-contract/src/: lib.rs  test.rs
